syntax = "proto3";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "gRPC_Service";


package meterusage;

service MeterUsageService {

rpc GetMeterData(Request) returns (stream MeterUsageDataModel) {}
 
}

//Request message with filter
message Request{
string filters=1;
}

//Response message
message MeterUsageDataModel {
  string Time = 1;
  float MeterUsage = 2;  
}
